# Kevin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  kevin-config.h.in
common/: common.cmake  error.cpp  error.h
common/logging/: README.md  logging-conf.cpp  logging-conf.h  logging.cpp  logging.h  sink-flusher.h  sink.cpp  sink.h
common/test/: README.md  kevin-test-main.cpp  kevin-test-repository.cpp  kevin-test-repository.h  kevin-test.cpp  kevin-test.h
common/test/unittests/: test_basics.cpp
doc/: consensus.md
proto/: consensus-service.proto  consensus.proto  proto.cmake  raft-service.proto  raft.proto
raft/: raft-common.h  raft-event-processor.h  raft-group.cpp  raft-group.h  raft-log.h  raft-state.cpp  raft-state.h  raft-store.cpp  raft-store.h  raft.cmake
server/: CMakeLists.txt  kevin.cpp  state-machine.cpp  state-machine.h
